[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scenes/class_select/class_select.gd" id="1"]

[node name="ClassSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.05, 0.04, 0.06, 1)

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -135.0
offset_right = 240.0
offset_bottom = 135.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="Title" type="Label" parent="VBox"]
layout_mode = 2
text = "Choose Your Class"
horizontal_alignment = 1

[node name="NameRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 4

[node name="NameLabel" type="Label" parent="VBox/NameRow"]
layout_mode = 2
text = "Name:"

[node name="NameInput" type="LineEdit" parent="VBox/NameRow"]
unique_name_in_owner = true
layout_mode = 2
custom_minimum_size = Vector2(120, 0)
placeholder_text = "Hero name"
max_length = 16

[node name="ClassGrid" type="GridContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
columns = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 4
size_flags_horizontal = 3

[node name="PreviewContainer" type="HBoxContainer" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1
custom_minimum_size = Vector2(0, 80)

[node name="BtnRow" type="HBoxContainer" parent="VBox"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 8

[node name="BackBtn" type="Button" parent="VBox/BtnRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Back"

[node name="StartBtn" type="Button" parent="VBox/BtnRow"]
unique_name_in_owner = true
layout_mode = 2
text = "Start Game"
